crates/accelbyte-ags-cli/tests/snapshot/snapshots/ags__frontend__terminal__fullscreen__phases__fields__tests__snapshot_fields_panel_gather_variant.snap
---
source: crates/accelbyte-ags-cli/src/frontend/terminal/fullscreen/phases/fields.rs
expression: render_to_text(&panel)
---
┌ Step 0 ──────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Provide inputs                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Parameters ──────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Inputs                                                                      │
│                                                                              │
│  ▸ user-id:     []                                                           │
│                                                                              │
│                                                                              │
│  [ Confirm ]                                                                 │
│                                                                              │
│                                                                              │
│                                                                              │
│  ┌────────────────────────────────────────────────────────────────────────┐  │
│  │ The player to target                                                   │  │
│  │                                                                        │  │
│  └────────────────────────────────────────────────────────────────────────┘  │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
